crates/rome_formatter/tests/specs/prettier/js/ternaries/nested.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: nested.js

---
# Input
```js
let icecream = what == "cone"
  ? p => !!p ? `here's your ${p} cone` : `just the empty cone for you`
  : p => `here's your ${p} ${what}`;

const value = condition1
? value1
: condition2
    ? value2
    : condition3
        ? value3
        : value4;


const StorybookLoader = ({ match }) => (
  match.params.storyId === "button"
    ? <ButtonStorybook />
    : match.params.storyId === "color"
    ? <ColorBook />
    : match.params.storyId === "typography"
    ? <TypographyBook />
    : match.params.storyId === "loading"
    ? <LoaderStorybook />
    : match.params.storyId === "deal-list"
    ? <DealListStory />
    : (
      <Message>
        <Title>{'Missing story book'}</Title>
        <Content>
          <BackButton/>
        </Content>
      </Message>
    )
)

const message =
    i % 3 === 0 && i % 5 === 0 ?
        'fizzbuzz'
    : i % 3 === 0 ?
        'fizz'
    : i % 5 === 0 ?
        'buzz'
    :
        String(i)

const paymentMessage = state == 'success'
  ? 'Payment completed successfully'

: state == 'processing'
  ? 'Payment processing'

: state == 'invalid_cvc'
  ? 'There was an issue with your CVC number'

: state == 'invalid_expiry'
  ? 'Expiry must be sometime in the past.'

  : 'There was an issue with the payment.  Please contact support.'

const paymentMessage2 = state == 'success'
  ? 1 //'Payment completed successfully'

: state == 'processing'
  ? 2 //'Payment processing'

: state == 'invalid_cvc'
  ? 3 //'There was an issue with your CVC number'

: true //state == 'invalid_expiry'
  ? 4 //'Expiry must be sometime in the past.'

  : 5 // 'There was an issue with the payment.  Please contact support.'

const foo = <div className={'match-achievement-medal-type type' + (medals[0].record ? '-record' : (medals[0].unique ? '-unique' : medals[0].type))}>
	{medals[0].record ? (
		i18n('Record')
	) : medals[0].unique ? (
		i18n('Unique')
	) : medals[0].type === 0 ? (
		i18n('Silver')
	) : medals[0].type === 1 ? (
		i18n('Gold')
	) : medals[0].type === 2 ? (
		i18n('Platinum')
	) : (
		i18n('Theme')
	)}
</div>

a
    ? literalline
    : {
      123: 12
    }
    ? line
    : softline

```

# Output
```js
let icecream = what == "cone" ? (p) =>
  !!p ? `here's your ${p} cone` : `just the empty cone for you` : (p) =>
  `here's your ${p} ${what}`;

const value = condition1
  ? value1
  : condition2
    ? value2
    : condition3
      ? value3
      : value4;

const StorybookLoader = ({ match }) => (
  match.params.storyId === "button"
    ? <ButtonStorybook />
    : match.params.storyId === "color"
    ? <ColorBook />
    : match.params.storyId === "typography"
    ? <TypographyBook />
    : match.params.storyId === "loading"
    ? <LoaderStorybook />
    : match.params.storyId === "deal-list"
    ? <DealListStory />
    : (
      <Message>
        <Title>{'Missing story book'}</Title>
        <Content>
          <BackButton/>
        </Content>
      </Message>
    )
)

const message = i % 3 === 0 && i % 5 === 0
  ? "fizzbuzz"
  : i % 3 === 0
    ? "fizz"
    : i % 5 === 0
      ? "buzz"
      : String(i);

const paymentMessage = state == "success"
  ? "Payment completed successfully"
  : state == "processing"
    ? "Payment processing"
    : state == "invalid_cvc"
      ? "There was an issue with your CVC number"
      : state == "invalid_expiry"
        ? "Expiry must be sometime in the past."
        : "There was an issue with the payment.  Please contact support.";

const paymentMessage2 = state == "success"
  ? 1 //'Payment completed successfully'
  : state == "processing"
    ? 2 //'Payment processing'
    : state == "invalid_cvc"
      ? 3 //'There was an issue with your CVC number'
      : true
        //state == 'invalid_expiry'
        ? 4 //'Expiry must be sometime in the past.'
        : 5; // 'There was an issue with the payment.  Please contact support.'

const foo = <div className={'match-achievement-medal-type type' + (medals[0].record ? '-record' : (medals[0].unique ? '-unique' : medals[0].type))}>
	{medals[0].record ? (
		i18n('Record')
	) : medals[0].unique ? (
		i18n('Unique')
	) : medals[0].type === 0 ? (
		i18n('Silver')
	) : medals[0].type === 1 ? (
		i18n('Gold')
	) : medals[0].type === 2 ? (
		i18n('Platinum')
	) : (
		i18n('Theme')
	)}
</div>

a
    ? literalline
    : {
      123: 12
    }
    ? line
    : softline

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:16:7
   │
16 │     ? <ButtonStorybook />
   │       ^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested.js:16:25
   │
16 │     ? <ButtonStorybook />
   │                        -^ But this operator was encountered instead
   │                        │ 
   │                        This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ':'
   ┌─ nested.js:17:5
   │
17 │     : match.params.storyId === "color"
   │     ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:18:7
   │
18 │     ? <ColorBook />
   │       ^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested.js:18:19
   │
18 │     ? <ColorBook />
   │                  -^ But this operator was encountered instead
   │                  │ 
   │                  This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ':'
   ┌─ nested.js:19:5
   │
19 │     : match.params.storyId === "typography"
   │     ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:20:7
   │
20 │     ? <TypographyBook />
   │       ^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested.js:20:24
   │
20 │     ? <TypographyBook />
   │                       -^ But this operator was encountered instead
   │                       │ 
   │                       This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ':'
   ┌─ nested.js:21:5
   │
21 │     : match.params.storyId === "loading"
   │     ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:22:7
   │
22 │     ? <LoaderStorybook />
   │       ^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested.js:22:25
   │
22 │     ? <LoaderStorybook />
   │                        -^ But this operator was encountered instead
   │                        │ 
   │                        This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ':'
   ┌─ nested.js:23:5
   │
23 │     : match.params.storyId === "deal-list"
   │     ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:24:7
   │
24 │     ? <DealListStory />
   │       ^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested.js:24:23
   │
24 │     ? <DealListStory />
   │                      -^ But this operator was encountered instead
   │                      │ 
   │                      This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ':'
   ┌─ nested.js:25:5
   │
25 │     : (
   │     ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:26:7
   │  
26 │ ┌       <Message>
27 │ │         <Title>{'Missing story book'}</Title>
   │ └─────────────────────────────────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ nested.js:27:39
   │
27 │         <Title>{'Missing story book'}</Title>
   │                                      -^ But this operator was encountered instead
   │                                      │ 
   │                                      This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:28:9
   │  
28 │ ┌         <Content>
29 │ │           <BackButton/>
   │ └─────────────────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested.js:29:23
   │
29 │           <BackButton/>
   │                      -^ But this operator was encountered instead
   │                      │ 
   │                      This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:30:9
   │
30 │         </Content>
   │         ^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested.js:31:7
   │
31 │       </Message>
   │       ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested.js:32:5
   │
32 │     )
   │     ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<div className`
   ┌─ nested.js:73:13
   │
73 │ const foo = <div className={'match-achievement-medal-type type' + (medals[0].record ? '-record' : (medals[0].unique ? '-unique' : medals[0].type))}>
   │             ^^^^^^^^^^^^^^ This expression cannot be assigned to

error[SyntaxError]: expected `:` but instead found `+`
   ┌─ nested.js:73:65
   │
73 │ const foo = <div className={'match-achievement-medal-type type' + (medals[0].record ? '-record' : (medals[0].unique ? '-unique' : medals[0].type))}>
   │                                                                 ^ unexpected

error[SyntaxError]: expected `,` but instead found `[`
   ┌─ nested.js:74:9
   │
74 │     {medals[0].record ? (
   │            ^ unexpected

error[SyntaxError]: expected `:` but instead found `.`
   ┌─ nested.js:74:12
   │
74 │     {medals[0].record ? (
   │               ^ unexpected

error[SyntaxError]: expected `,` but instead found `i18n`
   ┌─ nested.js:75:3
   │
75 │         i18n('Record')
   │         ^^^^ unexpected

error[SyntaxError]: expected a parameter but instead found ''Record''
   ┌─ nested.js:75:8
   │
75 │         i18n('Record')
   │              ^^^^^^^^ Expected a parameter here

error[SyntaxError]: expected a function body but instead found ')'
   ┌─ nested.js:76:2
   │
76 │     ) : medals[0].unique ? (
   │     ^ Expected a function body here

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ nested.js:87:2
   │
87 │ </div>
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value


```


